Fixed spacing error on Apps icon.

--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,6 @@ a {
 
 #apps {
 	position: relative;
-	top: -7px;
-}
-
-#apps:hover {
-	background: black;
 }
 
 a:hover {
